[package]
name = "timelapse_player"
version = "0.1.0"
authors = ["Your Name <email@address.com>"]
edition = "2018"


[lib]
crate-type = ["cdylib"]


[dependencies]
gloo-timers = {version = "0.2.1", features = ["futures"]}
futures = "^0.3.4"
seed = "^0.6.0"
wasm-bindgen = "^0.2.50"
js-sys = "0.3.37"
[dependencies.web-sys]
version = "0.3.37"
features = [
    "HtmlVideoElement",
    "HtmlMediaElement",
    "SvgElement",
    "SvgPoint",
    "SvgsvgElement",
    "SvgMatrix",
    "Document",
    "Element",
    "ShadowRoot",
    "EventTarget",
    "DomRect",
    "EventTarget",
    "Event"
]

# For serialization, eg sending requests to a server. Otherwise, not required.
#serde = { version = "^1.0.85", features = ['derive'] }



[dev-dependencies]
wasm-bindgen-test = "0.2.50" # NOTE: keep in sync with wasm-bindgen version


[profile.release]  # Attempts to minimize file size
lto = true
opt-level = 'z'
